# craby

./: .gitignore  Cargo.toml  mise.toml  package.json
.github/workflows/: ci.yml  deploy-docs.yml  e2e.yml
crates/craby/: Cargo.toml
crates/craby/src/: context.rs  lib.rs  macros.rs  types.rs
crates/craby_build/: Cargo.toml
crates/craby_build/src/: constants.rs  cxx.rs  lib.rs
crates/craby_build/src/cargo/: artifact.rs
crates/craby_build/src/platform/: android.rs  common.rs  ios.rs  mod.rs
crates/craby_cli/: Cargo.toml
crates/craby_cli/src/commands/codegen/: handler.rs
crates/craby_cli/src/commands/doctor/: handler.rs  mod.rs  suggestion.rs
crates/craby_cli/src/commands/init/: handler.rs  rust.rs
crates/craby_cli/src/commands/show/: handler.rs
crates/craby_cli/src/utils/: file.rs  git.rs  schema.rs  template.rs  terminal.rs
crates/craby_codegen/: Cargo.toml
crates/craby_codegen/src/: constants.rs  lib.rs  utils.rs
crates/craby_codegen/src/generators/: android_generator.rs  cxx_generator.rs  ios_generator.rs  mod.rs  rs_generator.rs  types.rs
crates/craby_codegen/src/generators/snapshots/: craby_codegen__generators__android_generator__tests__android_generator.snap  craby_codegen__generators__cxx_generator__tests__cxx_generator.snap  craby_codegen__generators__ios_generator__tests__ios_generator.snap  craby_codegen__generators__rs_generator__tests__rs_generator.snap
crates/craby_codegen/src/parser/: native_spec_parser.rs  types.rs
crates/craby_codegen/src/parser/snapshots/: craby_codegen__parser__native_spec_parser__tests__common_spec.snap  craby_codegen__parser__native_spec_parser__tests__hash.snap  craby_codegen__parser__native_spec_parser__tests__signals.snap
crates/craby_codegen/src/platform/: cxx.rs  mod.rs  rust.rs
crates/craby_codegen/src/tests/: mod.rs
crates/craby_common/src/: constants.rs
crates/craby_macro/: Cargo.toml
crates/craby_macro/src/: lib.rs
docs/.vitepress/: config.mts
docs/content/docs/: limitations.mdx
docs/content/docs/get-started/: create-project.mdx  introduction.mdx  module-definition.mdx
docs/content/docs/guides/: file-io.mdx  signals.mdx  types.mdx
docs/guide/: build.md  cli-commands.md  codegen.md  configuration.md  errors.md  file-io.md  getting-started.md  introduction.md  limitations.md  module-definition.md  signals.md  stateful-modules.md  sync-vs-async.md  types.md
docs/src/app/: layout.tsx
docs/src/app/(home)/: page.tsx
docs/src/components/: circular-progress.tsx  code-preview.tsx  feature.tsx  navbar.tsx  sidebar.tsx
docs/src/components/icons/: cmake.tsx  github.tsx  gradle.tsx  nodejs.tsx  rust.tsx  toml.tsx  typescript.tsx
examples/0.80/: App.tsx
examples/craby-test/: package.json
examples/craby-test/android/: CMakeLists.txt
examples/craby-test/android/src/main/jni/: OnLoad.cpp
examples/craby-test/android/src/main/jni/include/: CrabySignals.h  ffi.rs.h
examples/craby-test/android/src/main/jni/src/: ffi.rs.cc
examples/craby-test/cpp/: CrabyUtils.hpp  CxxCalculatorModule.cpp  CxxCalculatorModule.hpp  CxxCrabyTestModule.cpp  CxxCrabyTestModule.hpp  bridging-generated.hpp
examples/craby-test/crates/lib/: Cargo.toml
examples/craby-test/crates/lib/include/: CrabySignals.h  signals.h
examples/craby-test/crates/lib/src/: calculator_impl.rs  craby_test_impl.rs  ffi.rs  generated.rs  lib.rs  macros.rs  types.rs
examples/craby-test/ios/: CrabyTestModuleProvider.mm
examples/craby-test/ios/include/: CrabySignals.h  ffi.rs.h  signals.h
examples/craby-test/ios/src/: ffi.rs.cc
examples/craby-test/src/: NativeCrabyTest.ts  index.ts
examples/test-suites/: package.json
examples/test-suites/src/: test-suites.ts  utils.ts
template/: biome.json  package.json
template/android/: build.gradle
template/crates/lib/: Cargo.toml
template/crates/lib/src/: ffi.rs  generated.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/tasks/: prepare.rs  version.rs
