[workspace]
members = [
    "crates/*",
    "packages/cli-bindings",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.8"
edition = "2021"
authors = ["Geunhyeok LEE <dev.ghlee@gmail.com>"]

[workspace.dependencies]
anyhow       = "1.0.98"
env_logger   = "0.11.8"
log          = "0.4.27"
owo-colors   = "4.2.2"
serde        = "1.0.219"
serde_json   = "1.0.140"
serde_derive = "1.0.219"

[workspace.metadata.workspaces]
allow_branch = "release/*"

[profile.release]
lto = true
strip = true
