[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde_derive.workspace = true
indexmap = {version = "2.0.0", features = ["serde"]}
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
