[package]
name = "craby"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core prelude for Craby Modules"
license = "MIT"
repository = "https://github.com/leegeunhyeok/craby"

[dependencies]
craby_macro = { version = "0.0.0", path = "../craby_macro" }
anyhow      = { workspace = true }
