[package]
name = "craby_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Craby CLI"
license = "MIT"
repository = "https://github.com/leegeunhyeok/craby"

[dependencies]
craby_build    = { version = "0.0.0", path = "../craby_build", features = ["artifact"] }
craby_codegen  = { version = "0.0.0", path = "../craby_codegen" }
craby_common   = { version = "0.0.0", path = "../craby_common" }
anyhow         = { workspace = true }
log            = { workspace = true }
owo-colors     = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true, features = ["preserve_order"] }
clap           = { version = "4.5.41", features = ["derive"] }
handlebars     = { version = "6.3.2", features = ["walkdir"] }
walkdir        = "2.5.0"
inquire        = "0.7.5"
indicatif      = "0.18.0"
syntect        = "5.2.0"
syntect-assets = "0.23.6"
indoc          = "2.0.6"
chrono         = "0.4.42"
email_address  = "0.2.9"
url            = "2.5.7"
