[package]
name = "craby_codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Craby code generator"
license = "MIT"
repository = "https://github.com/leegeunhyeok/craby"

[dependencies]
craby_common = { version = "0.1.0-beta.8", path = "../craby_common" }
uuid         = { version = "1.17.0", features = ["v4"] }
oxc          = { version = "0.90.0", features = ["ast_visit", "semantic", "transformer"] }
anyhow       = { workspace = true }
log          = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
serde_derive = { workspace = true }
indoc        = "2.0.6"
thiserror    = "2.0.16"
rustc-hash   = "2.1.1"
xxhash-rust  = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
insta = "1.43.2"
