[package]
name = "craby_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Procedural macros for Craby"
license = "MIT"
repository = "https://github.com/leegeunhyeok/craby"

[lib]
proc-macro = true

[dependencies]
syn         = { version = "2.0.108", features = ["full"] }
quote       = "1.0.41"
proc-macro2 = "1.0.103"
