[package]
name = "{{ snake_name }}"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.99"
craby = "0.1.0"
cxx = { version = "1.0.187", features = ["c++20"] }

[build-dependencies]
craby_build = { version = "0.1.0", features = ["cxx"] }

[lib]
name = "{{ flat_name }}"
crate-type = ["staticlib"]
